# conan-ImageMagick

./: CMakeLists.txt  conanfile.py  magick-baseconfig.h.in
test_package/: conanfile.py
